--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -16,15 +17,22 @@
             <div  id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta  e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail" autocomplete="email">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <input type="password" name="senha" id="isenha" placeholder="Sua Senha">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                            </span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua Senha" autocomplete="current-password">
                         <label for="isenha">Senha</label>
                     </div>
+                    <input id="submit" type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">Esqueci minha senha <span class="material-symbols-outlined">mail</span></a>
+                    
                 </form>
             </div>
         </section>
